--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,11 +5,13 @@
   }/* Reset CSS */
 
   body{
-    background-color: #eee; 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: white; 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100%;
+    overflow-x: hidden;
 }/*general para que se replique en todo el cuerpo de la pag*/
 h1{
-    color: rgb(254, 129, 191);
+    color: black;
     text-decoration: underline;
     font-size: 1,5rem;
     text-align: center;
@@ -36,31 +38,31 @@ h1{
 .navbar ul li a {
     text-decoration: underline;
     font-size: 0.65rem;
-    color: #333;
-    font-weight: 500;
     transition: color 0.3s ease;
     font-weight: bold;
-}/*detalle de los links*/
+}
+/*detalle de los links*/
   
 .navbar ul li a:hover {
-    color: #E14591;
+    color: grey;
 }/*detalle de cambio de color cuando paso el mouse por encima*/
 
 .ptitulo{
-    color: rgb(254, 129, 191);
+    color: black;
+    background-color: rgb(212, 209, 209);
     text-decoration: underline;
     font-size: 1.5rem;
     text-align: center;
     font-weight: bold;
 } /*color para el slogan de marca*/
 .comunidad{
-    border: 2px solid rgb(254, 129, 191);
+    border: 2px solid grey;
     border-radius: 15px;
     padding: 20px;
     width: 30%;
 }/*detalle para recuadro que encierra porque ser parte de nuestra comunidad*/
 .comunidad p{
-    color: rgb(254, 129, 191);
+    color: black;
     text-decoration: underline;
     font-size: 1.2rem;
 } /*color para titulo porqué ser parte de nuestra comunidad*/
@@ -70,13 +72,13 @@ section ul li{
     text-align: left;
 } /*detalles para la lista de items comunidad*/
 .serparte{
-    border: 2px solid rgb(254, 129, 191);
+    border: 2px solid grey;
     border-radius: 15px;
     padding: 20px;
     width: 30%;
 }/*detalle para recuadro que encierra cómo ser parte de nuestra comunidad*/
 .serparte p{
-    color: rgb(254, 129, 191);
+    color: black;
     text-decoration: underline;
     font-size: 1.2rem;
 } /*detalles para titulo de ser parte?*/
@@ -99,7 +101,8 @@ section ol li{
     flex-wrap: wrap;
 }
 h2{
-    color: #E14591;
+    color: black;
+    background-color: rgb(212, 209, 209);
     text-decoration: underline;
     text-align: center;
     font-weight: bold;
@@ -124,7 +127,6 @@ h2{
     width: 200px;
     height: 200px;
     object-fit: cover;
-    border-radius: 20px;
 }/*detalle imagenes para productos*/
 .productos {
     display: flex;
@@ -138,7 +140,7 @@ h2{
 .tarjetalink{
     text-decoration: underline;
     font-size: 0.8rem;
-    color: rgb(231, 56, 143)
+    color: black
 }
 .tarjetalink:hover{
     color: black;
@@ -174,7 +176,7 @@ h2{
     text-decoration: underline;
 }/*nombre de los tipos de estilos para cada imagen*/
 footer {
-    background:  rgb(254, 129, 191);
+    background:  rgb(212, 209, 209);;
     color: black;
     font-size: 0.85rem;
     margin-top: 15px;
@@ -192,7 +194,7 @@ footer {
     transition: color 0.3s ease; /* <- Transición del color, sin un valor fijo */
 }
 .footera:hover {
-    color: #E14591;
+    color: black;
 }
 .copyright {
     font-size: 0.75rem;
@@ -234,16 +236,16 @@ input[type="password"] {
     }
 .boton {
         font-size: 1rem;
-        background-color: #ff69b4;
+        background-color: black;
         color: white;
-        border: 2px solid #ff1493;
+        border: 2px solid black;
         border-radius: 10px;
         padding: 10px 20px;
         text-decoration: none;
         display: inline-block;
     }
 .boton:hover {
-        background-color: #ff1493;
+        background-color: grey;
     }
 
 .pquienes {
@@ -266,7 +268,7 @@ input[type="password"] {
 }
     
 .preg-titulo {
-    color: #E14591;
+    color: black;
     text-decoration: underline;
     text-align: left;
     font-size: 1.5rem;
@@ -288,10 +290,6 @@ input[type="password"] {
     text-align: center; 
     margin-top: 15px;  
 }
-.testimonios h2{
-    color: aqua;
-    text-align: left;
-}
 .detalletest{
     border: 2px solid black;
     border-radius: 15px;
@@ -306,17 +304,17 @@ input[type="password"] {
 }
 
 .btn-primary{
-    background-color: #E14591;
+    background-color: white;
     color: black;
-    border: black;
+    border-color: black;
 }
 .btn-primary:hover {
-    background-color: #ff1493;
+    background-color: grey;
 }
 .estilobtn2:active {
-    background-color: #ff1493;
-    color: white;
-    border-color: #ff1493;
+    background-color: white;
+    color: black;
+    border-color: black;
   }
 .estilobtn{
     font-size: 10px;
@@ -329,7 +327,7 @@ input[type="password"] {
     border: 1px solid black;
 }
 .estilobtn2:hover{
-    background-color: #E14591;
+    background-color: grey;
 }
 
 .edicioncarousel {
@@ -364,6 +362,16 @@ input[type="password"] {
 .ediciontexto {
     color: black;
     font-size: 12px;
+  }
+
+  .localdiv {
+    width: 100%;    /* El contenedor ocupa todo el ancho */
+    overflow: hidden; /* Evita que se desborde contenido */
+  }
+  
+  .local {
+    width: 100%;   /* La imagen ocupa el 100% del ancho del contenedor */
+    height: 20%;  /* Mantiene las proporciones de la imagen */
   }
 
 /*responsive*/
