--- a/styles/styles.css
+++ b/styles/styles.css
@@ -365,13 +365,13 @@ input[type="password"] {
   }
 
   .localdiv {
-    width: 100%;    /* El contenedor ocupa todo el ancho */
-    overflow: hidden; /* Evita que se desborde contenido */
+    width: 100%;
+    overflow: hidden;
   }
   
   .local {
-    width: 100%;   /* La imagen ocupa el 100% del ancho del contenedor */
-    height: 20%;  /* Mantiene las proporciones de la imagen */
+    width: 100%;
+    height: 20%;
   }
 
 /*responsive*/
